# ComfyUI_XLweb

./: README.md  __init__.py  app.js  comfyui-interface.html  index.html  interface-script.js  interface-styles.css  language-test.html  pyproject.toml  styles.css
languages/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  ru.json  zh-CN.json  zh-TW.json
workflow/i2i/: 1.txt  image2image.json
workflow/t2v/: default.txt
workflow/video_wan2_2_14B_i2v/: 1.txt  i2v_wan2.2.json
